--- a/molecule/suse-15/playbook.yml
+++ b/molecule/suse-15/playbook.yml
@@ -16,11 +16,13 @@
 
 - hosts: all
   remote_user: root
+  become: true
   roles:
     - role: rclone
 
 - hosts: all
   remote_user: root
+  become: true
   tasks:
     - name: rclone --version
       command: rclone --version
