Abstract archive download checksum with multiple version support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,9 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# URL for download rclone binary.
+# rclone version.
 rclone_version: "v1.47.0"
-rclone_download:
-  url: "https://github.com/ncw/rclone/releases/download/{{ rclone_version }}/rclone-{{ rclone_version }}-linux-amd64.zip"
-  dest: "/tmp/rclone-{{ rclone_version }}-linux-amd64.zip"
-  checksum: "sha1:a471bb514132b37fe1719655b312dba506256f14"
+
+# rclone download details.
+rclone_download: "{{ _rclone_download[rclone_version] }}"
