--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,6 +59,17 @@
     - { dest: "/usr/local/bin" }
   tags: rclone
 
+- name: copy templates
+  template:
+    src: "./templates{{ item.dest }}.j2"
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0644') }}"
+  with_items:
+    - { dest: "/usr/local/bin/rclonefs", mode: "0755" }
+  tags: rclone
+
 - name: download archive
   get_url:
     url: "{{ item.url }}"
@@ -90,4 +101,5 @@
     state: "{{ item.state | default('file') }}"
   with_items:
     - { dest: "/usr/local/bin/rclone", mode: "0755" }
+    - { dest: "/usr/local/bin/rclonefs", mode: "0755" }
   tags: rclone
