--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.48.0:
+    url: "https://github.com/ncw/rclone/releases/download/v1.48.0/rclone-v1.48.0-linux-amd64.zip"
+    dest: "/tmp/rclone-v1.48.0-linux-amd64.zip"
+    checksum: "sha1:45a015f0ad03b9a8345687372b9053d3d10509c9"
   v1.47.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.47.0/rclone-v1.47.0-linux-amd64.zip"
     dest: "/tmp/rclone-v1.47.0-linux-amd64.zip"
