--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,7 +55,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
-  with_items:
+  loop:
     - { dest: "/usr/local/bin" }
   tags: rclone
 
@@ -66,7 +66,7 @@
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
-  with_items:
+  loop:
     - { dest: "/usr/local/bin/rclonefs", mode: "0755" }
   tags: rclone
 
@@ -75,7 +75,7 @@
     url: "{{ item.url }}"
     dest: "{{ item.dest }}"
     checksum: "{{ item.checksum }}"
-  with_items:
+  loop:
     - "{{ rclone_download }}"
   register: result
   until: result is succeeded
@@ -99,7 +99,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
-  with_items:
+  loop:
     - { dest: "/usr/local/bin/rclone", mode: "0755" }
     - { dest: "/usr/local/bin/rclonefs", mode: "0755" }
   tags: rclone
