--- a/vars/main.yml
+++ b/vars/main.yml
@@ -17,17 +17,17 @@
 _rclone_download:
   v1.48.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.48.0/rclone-v1.48.0-linux-amd64.zip"
-    dest: "/tmp/rclone-v1.48.0-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.48.0-linux-amd64.zip"
     checksum: "sha1:45a015f0ad03b9a8345687372b9053d3d10509c9"
   v1.47.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.47.0/rclone-v1.47.0-linux-amd64.zip"
-    dest: "/tmp/rclone-v1.47.0-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.47.0-linux-amd64.zip"
     checksum: "sha1:a471bb514132b37fe1719655b312dba506256f14"
   v1.46.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.46/rclone-v1.46-linux-amd64.zip"
-    dest: "/tmp/rclone-v1.46-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.46-linux-amd64.zip"
     checksum: "sha1:f3998a79c4080d5e4e778199a9577624f728171b"
   v1.45.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.45/rclone-v1.45-linux-amd64.zip"
-    dest: "/tmp/rclone-v1.45-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.45-linux-amd64.zip"
     checksum: "sha1:caa5247e91b7d50aeaeea8c84d49cf2270f8bcd0"
