--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.49.1:
+    url: "https://github.com/ncw/rclone/releases/download/v1.49.1/rclone-v1.49.1-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.49.1-linux-amd64.zip"
+    checksum: "sha1:19a52b065384e278763bd81bbed317d1dfbf0b4d"
   v1.49.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.49.0/rclone-v1.49.0-linux-amd64.zip"
     dest: "/var/cache/ansible/rclone-v1.49.0-linux-amd64.zip"
