--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.49.3:
+    url: "https://github.com/ncw/rclone/releases/download/v1.49.3/rclone-v1.49.3-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.49.3-linux-amd64.zip"
+    checksum: "sha1:168c66a48c5e4708649dd15481bd0294a4237189"
   v1.49.2:
     url: "https://github.com/ncw/rclone/releases/download/v1.49.2/rclone-v1.49.2-linux-amd64.zip"
     dest: "/var/cache/ansible/rclone-v1.49.2-linux-amd64.zip"
