--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.49.4:
+    url: "https://github.com/ncw/rclone/releases/download/v1.49.4/rclone-v1.49.4-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.49.4-linux-amd64.zip"
+    checksum: "sha1:3b0db3c59e2b565ef0aa9acbb7174d8b2da91f65"
   v1.49.3:
     url: "https://github.com/ncw/rclone/releases/download/v1.49.3/rclone-v1.49.3-linux-amd64.zip"
     dest: "/var/cache/ansible/rclone-v1.49.3-linux-amd64.zip"
