--- a/molecule/ubuntu-18.04-vagrant/playbook.yml
+++ b/molecule/ubuntu-18.04-vagrant/playbook.yml
@@ -25,6 +25,8 @@
   become: true
   tasks:
     - name: rclone --version
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       command: rclone --version
       register: result
       changed_when: result is not succeeded
