--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.50.1:
+    url: "https://github.com/ncw/rclone/releases/download/v1.50.1/rclone-v1.50.1-linux-amd64.zip"
+    dest: "/var/cache/ansible/rclone-v1.50.1-linux-amd64.zip"
+    checksum: "sha1:1a827a42384db8543a83d849d45a64f8708c4eac"
   v1.50.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.50.0/rclone-v1.50.0-linux-amd64.zip"
     dest: "/var/cache/ansible/rclone-v1.50.0-linux-amd64.zip"
