--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,7 +76,10 @@
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    TMP_DIR="`mktemp -d `" && unzip -qq -d $TMP_DIR {{ rclone_download.dest }} && mv $TMP_DIR/*/rclone . && rm -rf $TMP_DIR
+    TMP_DIR="`mktemp -d `" \
+      && unzip -qq -d $TMP_DIR {{ rclone_download.dest }} \
+      && mv $TMP_DIR/*/rclone . \
+      && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
   when: get_url_result is changed
