--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,6 +56,7 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
+    - { dest: "/etc/bash_completion.d" }
     - { dest: "/usr/local/bin" }
     - { dest: "{{ rclone_download.dest | dirname }}" }
   tags: rclone
