--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -15,4 +15,5 @@
 # limitations under the License.
 
 _yum:
+  - { state: "latest", name: "bash-completion" }
   - { state: "latest", name: "unzip" }
