--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,6 +79,8 @@
     cd /usr/local/bin
     TMP_DIR="`mktemp -d `" \
       && unzip -qq -d $TMP_DIR {{ rclone_download.dest }} \
+      && chown root:root $TMP_DIR/*/rclone \
+      && chmod 0755 $TMP_DIR/*/rclone \
       && mv $TMP_DIR/*/rclone . \
       && rm -rf $TMP_DIR
   args:
