--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,7 +79,7 @@
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    TMP_DIR="`mktemp -d `" \
+    TMP_DIR="$(mktemp -d )" \
       && unzip -qq -d $TMP_DIR {{ rclone_download.dest }} \
       && chown root:root $TMP_DIR/*/rclone \
       && chmod 0755 $TMP_DIR/*/rclone \
