--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.52.1:
+    url: "https://github.com/ncw/rclone/releases/download/v1.52.1/rclone-v1.52.1-linux-amd64.zip"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.52.1-linux-amd64.zip"
+    checksum: "sha1:60ccc21ff07f980d28cf988840ba20dfee2c1d05"
   v1.52.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.52.0/rclone-v1.52.0-linux-amd64.zip"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.52.0-linux-amd64.zip"
