--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.52.2:
+    url: "https://github.com/ncw/rclone/releases/download/v1.52.2/rclone-v1.52.2-linux-amd64.zip"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.52.2-linux-amd64.zip"
+    checksum: "sha1:05ecd472fb0cf7e37b1fa5db5599a17a45dfb8fd"
   v1.52.1:
     url: "https://github.com/ncw/rclone/releases/download/v1.52.1/rclone-v1.52.1-linux-amd64.zip"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.52.1-linux-amd64.zip"
