--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _rclone_download:
+  v1.53.1:
+    url: "https://github.com/ncw/rclone/releases/download/v1.53.1/rclone-v1.53.1-linux-amd64.zip"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.53.1-linux-amd64.zip"
+    checksum: "sha1:562fe567f615d6767236eb8402109882ace745e6"
   v1.53.0:
     url: "https://github.com/ncw/rclone/releases/download/v1.53.0/rclone-v1.53.0-linux-amd64.zip"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/rclone-v1.53.0-linux-amd64.zip"
