--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@
 # limitations under the License.
 
 galaxy_info:
+  namespace: alvistack
   role_name: rclone
   author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
   description: Ansible Role for rclone Installation
