--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,6 +14,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+_rclone_version:
+  "v1.55": "v1.55.1"
+  "v1.54": "v1.54.1"
+
 _rclone_download:
   "v1.55.1":
     url: "http://github.com/ncw/rclone/releases/download/v1.55.1/rclone-v1.55.1-linux-amd64.zip"
