creates: "/var/log/ansible/{{ item.checksum }}-get_url.log"

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -67,19 +67,19 @@
 - name: download archive
   shell: |
     set -euxo pipefail
+    mkdir -p /var/log/ansible
+    exec &> >(tee -a /var/log/ansible/{{ rclone_download.checksum }}-get_url.log)
     TMP_DIR="$(mktemp -d)" \
       && cd $TMP_DIR \
-      && mkdir -p .{{ item.dest | dirname }} \
-      && curl -skL -m 300 {{ item.url }} > .{{ item.dest }} \
-      && echo -n "{{ item.checksum }} .{{ item.dest }}" | sha256sum -c - \
-      && mkdir -p {{ item.dest | dirname }} \
-      && mv .{{ item.dest }} {{ item.dest }} \
+      && mkdir -p .{{ rclone_download.dest | dirname }} \
+      && curl -skL -m 300 {{ rclone_download.url }} > .{{ rclone_download.dest }} \
+      && echo -n "{{ rclone_download.checksum }} .{{ rclone_download.dest }}" | sha256sum -c - \
+      && mkdir -p {{ rclone_download.dest | dirname }} \
+      && mv .{{ rclone_download.dest }} {{ rclone_download.dest }} \
       && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
-    creates: "{{ item.dest | dirname }}"
-  loop:
-    - "{{ rclone_download }}"
+    creates: "/var/log/ansible/{{ rclone_download.checksum }}-get_url.log"
   register: result
   until: result is succeeded
 
@@ -87,7 +87,7 @@
   shell: |
     set -euxo pipefail
     mkdir -p /var/log/ansible
-    exec &> >(tee -a /var/log/ansible/{{ rclone_download.checksum }}.log)
+    exec &> >(tee -a /var/log/ansible/{{ rclone_download.checksum }}-unarchive.log)
     cd /usr/local/bin
     TMP_DIR="$(mktemp -d )" \
       && unzip -qq -d $TMP_DIR {{ rclone_download.dest }} \
@@ -97,7 +97,7 @@
       && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
-    creates: "/var/log/ansible/{{ rclone_download.checksum }}.log"
+    creates: "/var/log/ansible/{{ rclone_download.checksum }}-unarchive.log"
 
 - name: install bash completion
   environment:
