--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -18,9 +18,9 @@
   remote_user: root
   become: true
   tasks:
-    - name: rclone --version
+    - name: rclone version
       environment:
         PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-      command: rclone --version
+      command: rclone version
       register: result
       changed_when: result is not succeeded
