https://ansible-lint.readthedocs.io/en/latest/default_rules/#fqcn-builtins

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -19,6 +19,6 @@
   become: true
   tasks:
     - name: rclone version
-      command: rclone version
+      ansible.builtin.command: rclone version
       register: result
       changed_when: result is not succeeded
