--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -20,5 +20,5 @@
   tasks:
     - name: include role
       ansible.builtin.include_role:
-        name: rclone
-      tags: rclone
+        name: alvistack.rclone
+      tags: alvistack.rclone
