--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,7 @@
 galaxy_info:
   standalone: true
   role_name: rclone
+  namespace: alvistack
   author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
   description: Ansible Role for rclone Installation
   company: PantaRei Design
