--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -20,6 +20,7 @@
   become: true
   tasks:
     - name: rclone version
-      ansible.builtin.command: rclone version
+      ansible.builtin.command:
+        cmd: rclone version
       register: result
       changed_when: result is not succeeded
